优化了代码的可读性，新增了响应式布局

--- a/Bilibili/bili/bilibili.html
+++ b/Bilibili/bili/bilibili.html
@@ -254,7 +254,6 @@
                         </p>
                     </div>
                 </a>
-                <!-- 视频2：替换原video-view1为渐变遮罩 -->
                 <a href="" class="video-item">
                     <div class="video-img-container">
                         <div class="video-view"></div>
@@ -281,7 +280,6 @@
                         </p>
                     </div>
                 </a>
-                <!-- 视频3：替换原video-view1为渐变遮罩 -->
                 <a href="" class="video-item">
                     <div class="video-img-container">
                         <div class="video-view"></div>
@@ -308,7 +306,6 @@
                         </p>
                     </div>
                 </a>
-                <!-- 视频4：替换原video-view1为渐变遮罩 -->
                 <a href="" class="video-item">
                     <div class="video-img-container">
                         <div class="video-view"></div>
@@ -335,7 +332,6 @@
                         </p>
                     </div>
                 </a>
-                <!-- 视频5：替换原video-view1为渐变遮罩 -->
                 <a href="" class="video-item">
                     <div class="video-img-container">
                         <div class="video-view"></div>
@@ -362,7 +358,6 @@
                         </p>
                     </div>
                 </a>
-                <!-- 视频6：替换原video-view1为渐变遮罩 -->
                 <a href="" class="video-item">
                     <div class="video-img-container">
                         <div class="video-view"></div>
@@ -393,7 +388,6 @@
         </div>
         
         <ul class="main-ul">
-            <!-- 视频7：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -420,7 +414,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频8：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -447,7 +440,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频9：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -474,7 +466,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频10：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -501,7 +492,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频11：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -528,7 +518,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频12：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -555,7 +544,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频13：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -582,7 +570,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频14：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -609,7 +596,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频15：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -636,7 +622,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频16：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -663,7 +648,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频17：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -690,7 +674,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频18：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -717,7 +700,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频19：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -744,7 +726,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频20：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -771,7 +752,6 @@
                     </p>
                 </div>
             </a>
-            <!-- 视频21：替换原video-view2为渐变遮罩 -->
             <a href="" class="video-item">
                 <div class="video-img-container">
                     <div class="video-view"></div>
@@ -795,6 +775,266 @@
                     <p class="video-up-container">
                         <i class="iconfont icon-uper"></i>
                         <span class="video-up">Zhan丨· 9-19</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping22.jpg" alt="视频22">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>143.6万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>1.4万</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>5:11</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"互联网的大风吹的很猛烈"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">浪-整活的神· 20小时前</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping23.jpg" alt="视频23">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>183.6万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>3772</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>11:30</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"全中国肥胖率高的城市之一，有多好吃？"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">日食记· 9-25</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping24.jpg" alt="视频24">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>163.2万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>9154</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>15:40</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"新台风来了：台风博罗依将在长假前影响我国，长假后期或有更新台风形成"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">中气爱· 9-25</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping25.jpg" alt="视频25">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>163.2万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>9154</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>15:40</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"能点火？扛子弹？30年前的手机能干嘛？"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">影视飓风· 3小时前</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping26.jpg" alt="视频26">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>163.2万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>9154</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>15:40</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"台风也不停工，遥遥领先遥遥领先的世界牛马之都 快递里的中国 广东 深圳（1）宝安、光明、龙华"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">老猫鱼不吃鱼· 21小时前</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping27.jpg" alt="视频27">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>163.2万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>9154</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>15:40</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"合法兴奋剂？一口气把咖啡因的利弊讲清楚！【药不能停01】"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">医学边界· 21小时前</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping28.jpg" alt="视频28">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>163.2万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>9154</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>15:40</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"不做冤大头！零售版 iPhone 17 & 17Pro 体验评测 | 大米评测"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">大米评测· 20小时前</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping29.jpg" alt="视频29">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>163.2万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>9154</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>15:40</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"【IGN】《极限竞速：地平线6》先导预告 | TGS 2025"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">IGN中国· 9-25</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping30.jpg" alt="视频30">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>163.2万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>9154</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>15:40</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"网红们去完联合国，又去会见总统了！"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">铁柱大导演· 昨天</span>
+                    </p>
+                </div>
+            </a>
+            <a href="" class="video-item">
+                <div class="video-img-container">
+                    <div class="video-view"></div>
+                    <img src="/Bilibili/bili/img/shiping31.jpg" alt="视频31">
+                    <div class="video-data">
+                        <div class="play-count">
+                            <i class="iconfont icon-bofangliang"></i>
+                            <span>16.2万</span>
+                        </div>
+                        <div class="danmu-count">
+                            <i class="iconfont icon-danmushu"></i>
+                            <span>914</span>
+                        </div>
+                    </div>
+                    <div class="video-time">
+                        <span>5:40</span>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <h3 class="video-title">"【享拆】iPhone Air 拆解：苹果式极致堆叠，折叠机序曲！"</h3>
+                    <p class="video-up-container">
+                        <i class="iconfont icon-uper"></i>
+                        <span class="video-up">微机分WekiHome· 9-25</span>
                     </p>
                 </div>
             </a>
